@@ -54,7 +54,6 @@ import io.github.mzmine.datamodel.features.types.numbers.HeightType;
 import io.github.mzmine.datamodel.features.types.numbers.IntensityRangeType;
 import io.github.mzmine.datamodel.features.types.numbers.MZRangeType;
 import io.github.mzmine.datamodel.features.types.numbers.MZType;
-import io.github.mzmine.datamodel.features.types.numbers.MobilityRangeType;
 import io.github.mzmine.datamodel.features.types.numbers.RTRangeType;
 import io.github.mzmine.datamodel.features.types.numbers.RTType;
 import io.github.mzmine.datamodel.features.types.numbers.TailingFactorType;
@@ -62,10 +61,10 @@ import io.github.mzmine.modules.dataprocessing.featdet_adapchromatogrambuilder.A
 import io.github.mzmine.modules.dataprocessing.featdet_chromatogrambuilder.Chromatogram;
 import io.github.mzmine.modules.dataprocessing.featdet_chromatogramdeconvolution.ResolvedPeak;
 import io.github.mzmine.modules.dataprocessing.featdet_imagebuilder.IImage;
-import io.github.mzmine.modules.dataprocessing.featdet_recursiveimsbuilder.TempIMTrace;
 import io.github.mzmine.modules.dataprocessing.featdet_ionmobilitytracebuilder.IIonMobilityTrace;
 import io.github.mzmine.modules.dataprocessing.featdet_ionmobilitytracebuilder.RetentionTimeMobilityDataPoint;
 import io.github.mzmine.modules.dataprocessing.featdet_manual.ManualFeature;
+import io.github.mzmine.modules.dataprocessing.featdet_recursiveimsbuilder.TempIMTrace;
 import io.github.mzmine.modules.dataprocessing.gapfill_samerange.SameRangePeak;
 import io.github.mzmine.modules.tools.qualityparameters.QualityParameters;
 import io.github.mzmine.util.scans.ScanUtils;
@@ -100,8 +99,8 @@ public class FeatureConvertors {
           "Can not create modular feature from ADAP chromatogram of non-modular feature list.");
     }
 
-    ModularFeature modularFeature =
-        new ModularFeature((ModularFeatureList) chromatogram.getFeatureList());
+    ModularFeature modularFeature = new ModularFeature(
+        (ModularFeatureList) chromatogram.getFeatureList());
 
     modularFeature
         .set(FragmentScanNumbersType.class, List.of(chromatogram.getAllMS2FragmentScanNumbers()));
@@ -131,28 +130,14 @@ public class FeatureConvertors {
         Arrays.asList(chromatogram.getScanNumbers()));
     modularFeature.set(FeatureDataType.class, timeSeries);
 
-    // recalculate data dependet types
+    // recalculate data dependent types
     FeatureDataUtils.recalculateIonSeriesDependingTypes(modularFeature);
 
-    ObservableList<Scan> allMS2 = Arrays
-        .stream(ScanUtils.findAllMS2FragmentScans(chromatogram.getDataFile(),
+    ObservableList<Scan> allMS2 = Arrays.stream(ScanUtils
+        .findAllMS2FragmentScans(chromatogram.getDataFile(),
             modularFeature.getRawDataPointsRTRange(), modularFeature.getRawDataPointsMZRange()))
         .collect(Collectors.toCollection(FXCollections::observableArrayList));
     modularFeature.setAllMS2FragmentScans(allMS2);
-
-    // Quality parameters
-    /*float fwhm = QualityParameters.calculateFWHM(modularFeature);
-    if (!Float.isNaN(fwhm)) {
-      modularFeature.set(FwhmType.class, fwhm);
-    }
-    float tf = QualityParameters.calculateTailingFactor(modularFeature);
-    if (!Float.isNaN(tf)) {
-      modularFeature.set(TailingFactorType.class, tf);
-    }
-    float af = QualityParameters.calculateAsymmetryFactor(modularFeature);
-    if (!Float.isNaN(af)) {
-      modularFeature.set(AsymmetryFactorType.class, af);
-    }*/
 
     return modularFeature;
   }
@@ -170,84 +155,41 @@ public class FeatureConvertors {
           "Can not create modular feature from ion trace of non-modular feature list.");
     }
 
-    ModularFeature modularFeature =
-        new ModularFeature((ModularFeatureList) ionTrace.getFeatureList());
+    final ModularFeature modularFeature = new ModularFeature(
+        (ModularFeatureList) ionTrace.getFeatureList());
 
-    // TODO
-    modularFeature.setFragmentScan(null);
-    modularFeature.setRepresentativeScan(null);
     // Add values to feature
-//    modularFeature.set(ScanNumbersType.class, new ArrayList<>(ionTrace.getScanNumbers()));
     modularFeature.set(RawFileType.class, rawDataFile);
     modularFeature.set(DetectionType.class, FeatureStatus.DETECTED);
-    modularFeature.set(MZType.class, ionTrace.getMz());
-    modularFeature.set(RTType.class, (float) ionTrace.getRetentionTime());
-    modularFeature.setMobility((float) ionTrace.getMobility());
     modularFeature.setMobilityUnit(((IMSRawDataFile) rawDataFile).getMobilityType());
 
-    modularFeature.set(HeightType.class, (float) ionTrace.getMaximumIntensity());
-    // TODO
-    modularFeature.set(AreaType.class, (float) 0);
-    // TODO
-    modularFeature.set(BestScanNumberType.class, null);
-
-    // Data points of feature
-//    List<DataPoint> dps = new ArrayList<>(ionTrace.getDataPoints());
-//    modularFeature.set(DataPointsType.class, dps);
-
-    MemoryMapStorage storage = ((ModularFeatureList) ionTrace.getFeatureList())
+    final MemoryMapStorage storage = ((ModularFeatureList) ionTrace.getFeatureList())
         .getMemoryMapStorage();
-    List<IonMobilitySeries> mobilograms = new ArrayList<>();
+    final List<IonMobilitySeries> mobilograms = new ArrayList<>();
+
     var sortedDp = FeatureConvertorIonMobility.groupDataPointsByFrameId(ionTrace.getDataPoints());
     for (Entry<Frame, SortedSet<RetentionTimeMobilityDataPoint>> entry : sortedDp.entrySet()) {
       double[][] data = DataPointUtils.getDataPointsAsDoubleArray(entry.getValue());
       SimpleIonMobilitySeries mobilogram = new SimpleIonMobilitySeries(storage, data[0], data[1],
-          entry.getValue().stream().map(RetentionTimeMobilityDataPoint::getMobilityScan).collect(
-              Collectors.toList()));
+          entry.getValue().stream().map(RetentionTimeMobilityDataPoint::getMobilityScan).toList());
       mobilograms.add(mobilogram);
     }
-    IonMobilogramTimeSeries imTimeSeries = IonMobilogramTimeSeriesFactory
+
+    final IonMobilogramTimeSeries imTimeSeries = IonMobilogramTimeSeriesFactory
         .of(storage, mobilograms, mobilogramBinner);
     modularFeature.set(FeatureDataType.class, imTimeSeries);
 
-    // Ranges
-    Range<Float> rtRange = Range.closed(ionTrace.getRetentionTimeRange().lowerEndpoint(),
-        ionTrace.getRetentionTimeRange().upperEndpoint());
-    Range<Double> mzRange =
-        Range.closed(ionTrace.getMzRange().lowerEndpoint(), ionTrace.getMzRange().upperEndpoint());
-    Range<Float> intensityRange =
-        Range.closed(ionTrace.getIntensityRange().lowerEndpoint().floatValue(),
-            ionTrace.getIntensityRange().upperEndpoint().floatValue());
-    Range<Float> mobilityRange = Range
-        .closed(ionTrace.getMobilityRange().lowerEndpoint().floatValue(),
-            ionTrace.getMobilityRange().upperEndpoint().floatValue());
-    modularFeature.set(MZRangeType.class, mzRange);
-    modularFeature.set(RTRangeType.class, rtRange);
-    modularFeature.set(IntensityRangeType.class, intensityRange);
-    modularFeature.set(MobilityRangeType.class, mobilityRange);
-
-    // Quality parameters
-    float fwhm = QualityParameters.calculateFWHM(modularFeature);
-    if (!Float.isNaN(fwhm)) {
-      modularFeature.set(FwhmType.class, fwhm);
-    }
-    float tf = QualityParameters.calculateTailingFactor(modularFeature);
-    if (!Float.isNaN(tf)) {
-      modularFeature.set(TailingFactorType.class, tf);
-    }
-    float af = QualityParameters.calculateAsymmetryFactor(modularFeature);
-    if (!Float.isNaN(af)) {
-      modularFeature.set(AsymmetryFactorType.class, af);
-    }
-
-    FeatureDataUtils.recalculateIonSeriesDependingTypes(modularFeature);
+    // no need to calc quality parameters after feature detection.
+    FeatureDataUtils
+        .recalculateIonSeriesDependingTypes(modularFeature, FeatureDataUtils.DEFAULT_CENTER_MEASURE,
+            false);
 
     return modularFeature;
   }
 
-  public static ModularFeature tempIMTraceToModularFeature(
-      @NotNull TempIMTrace ionTrace, RawDataFile rawDataFile,
-      BinningMobilogramDataAccess mobilogramBinner, ModularFeatureList flist) {
+  public static ModularFeature tempIMTraceToModularFeature(@NotNull TempIMTrace ionTrace,
+      RawDataFile rawDataFile, BinningMobilogramDataAccess mobilogramBinner,
+      ModularFeatureList flist) {
 
     ModularFeature modularFeature = new ModularFeature(flist);
 
@@ -261,23 +203,8 @@ public class FeatureConvertors {
     IonMobilogramTimeSeries imTimeSeries = IonMobilogramTimeSeriesFactory
         .of(storage, ionTrace.getMobilograms(), mobilogramBinner);
     modularFeature.set(FeatureDataType.class, imTimeSeries);
-    FeatureDataUtils.recalculateIonSeriesDependingTypes(modularFeature);
-
-    // Quality parameters
-    if(imTimeSeries.getNumberOfValues() >= 3) {
-      float fwhm = QualityParameters.calculateFWHM(modularFeature);
-      if (!Float.isNaN(fwhm)) {
-        modularFeature.set(FwhmType.class, fwhm);
-      }
-      float tf = QualityParameters.calculateTailingFactor(modularFeature);
-      if (!Float.isNaN(tf)) {
-        modularFeature.set(TailingFactorType.class, tf);
-      }
-      float af = QualityParameters.calculateAsymmetryFactor(modularFeature);
-      if (!Float.isNaN(af)) {
-        modularFeature.set(AsymmetryFactorType.class, af);
-      }
-    }
+    // no need to calc quality parameters after feature detection.
+    FeatureDataUtils.recalculateIonSeriesDependingTypes(modularFeature, FeatureDataUtils.DEFAULT_CENTER_MEASURE, false);
 
     return modularFeature;
   }
@@ -320,10 +247,10 @@ public class FeatureConvertors {
 
     // Ranges
     Range<Float> rtRange = Range.closed(0.f, 0.f);
-    Range<Double> mzRange =
-        Range.closed(image.getMzRange().lowerEndpoint(), image.getMzRange().upperEndpoint());
-    Range<Float> intensityRange =
-        Range.closed(image.getIntensityRange().lowerEndpoint().floatValue(),
+    Range<Double> mzRange = Range
+        .closed(image.getMzRange().lowerEndpoint(), image.getMzRange().upperEndpoint());
+    Range<Float> intensityRange = Range
+        .closed(image.getIntensityRange().lowerEndpoint().floatValue(),
             image.getIntensityRange().upperEndpoint().floatValue());
     modularFeature.set(MZRangeType.class, mzRange);
     modularFeature.set(RTRangeType.class, rtRange);
@@ -407,8 +334,8 @@ public class FeatureConvertors {
         manualFeature.getRawDataPointsRTRange().upperEndpoint());
     Range<Double> mzRange = Range.closed(manualFeature.getRawDataPointsMZRange().lowerEndpoint(),
         manualFeature.getRawDataPointsMZRange().upperEndpoint());
-    Range<Float> intensityRange =
-        Range.closed(manualFeature.getRawDataPointsIntensityRange().lowerEndpoint(),
+    Range<Float> intensityRange = Range
+        .closed(manualFeature.getRawDataPointsIntensityRange().lowerEndpoint(),
             manualFeature.getRawDataPointsIntensityRange().upperEndpoint());
     modularFeature.set(MZRangeType.class, mzRange);
     modularFeature.set(RTRangeType.class, rtRange);
@@ -443,8 +370,7 @@ public class FeatureConvertors {
   }
 
   public static io.github.mzmine.datamodel.features.Feature SameRangePeakToModularFeature(
-      ModularFeatureList featureList,
-      SameRangePeak sameRangePeak) {
+      ModularFeatureList featureList, SameRangePeak sameRangePeak) {
 
     if (sameRangePeak.getPeakList() == null) {
       throw new NullPointerException("Feature list of the sameRangePeak is null.");
@@ -489,8 +415,8 @@ public class FeatureConvertors {
         sameRangePeak.getRawDataPointsRTRange().upperEndpoint());
     Range<Double> mzRange = Range.closed(sameRangePeak.getRawDataPointsMZRange().lowerEndpoint(),
         sameRangePeak.getRawDataPointsMZRange().upperEndpoint());
-    Range<Float> intensityRange =
-        Range.closed(sameRangePeak.getRawDataPointsIntensityRange().lowerEndpoint().floatValue(),
+    Range<Float> intensityRange = Range
+        .closed(sameRangePeak.getRawDataPointsIntensityRange().lowerEndpoint().floatValue(),
             sameRangePeak.getRawDataPointsIntensityRange().upperEndpoint().floatValue());
     modularFeature.set(MZRangeType.class, mzRange);
     modularFeature.set(RTRangeType.class, rtRange);
@@ -530,8 +456,7 @@ public class FeatureConvertors {
           "Can not create modular feature from sameRangePeak of non-modular feature list.");
     }
 
-    ModularFeature modularFeature =
-        new ModularFeature(featureList);
+    ModularFeature modularFeature = new ModularFeature(featureList);
 
     modularFeature
         .set(FragmentScanNumbersType.class, List.of(sameRangePeak.getAllMS2FragmentScanNumbers()));
@@ -565,8 +490,8 @@ public class FeatureConvertors {
         sameRangePeak.getRawDataPointsRTRange().upperEndpoint());
     Range<Double> mzRange = Range.closed(sameRangePeak.getRawDataPointsMZRange().lowerEndpoint(),
         sameRangePeak.getRawDataPointsMZRange().upperEndpoint());
-    Range<Float> intensityRange =
-        Range.closed(sameRangePeak.getRawDataPointsIntensityRange().lowerEndpoint().floatValue(),
+    Range<Float> intensityRange = Range
+        .closed(sameRangePeak.getRawDataPointsIntensityRange().lowerEndpoint().floatValue(),
             sameRangePeak.getRawDataPointsIntensityRange().upperEndpoint().floatValue());
     modularFeature.set(MZRangeType.class, mzRange);
     modularFeature.set(RTRangeType.class, rtRange);
@@ -636,17 +561,18 @@ public class FeatureConvertors {
 //        Arrays.asList(resolvedPeak.getScanNumbers()));
     IonTimeSeries<? extends Scan> resolvedData = null;
     if (originalData instanceof SimpleIonTimeSeries) {
-      resolvedData = ((SimpleIonTimeSeries) originalData).subSeries(
-          featureList.getMemoryMapStorage(),
-          Arrays.asList(resolvedPeak.getScanNumbers()));
+      resolvedData = ((SimpleIonTimeSeries) originalData)
+          .subSeries(featureList.getMemoryMapStorage(),
+              Arrays.asList(resolvedPeak.getScanNumbers()));
     } else if (originalData instanceof IonMobilogramTimeSeries) {
       List<? extends Scan> scans = Arrays.asList(resolvedPeak.getScanNumbers());
       List<Frame> frames = (List<Frame>) scans;
-      resolvedData = ((SimpleIonMobilogramTimeSeries) originalData).subSeries(
-          featureList.getMemoryMapStorage(), frames);
+      resolvedData = ((SimpleIonMobilogramTimeSeries) originalData)
+          .subSeries(featureList.getMemoryMapStorage(), frames);
     } else {
-      throw new IllegalArgumentException("Smoothing is not yet supported for this kind of data. " +
-          originalData.getClass().getName());
+      throw new IllegalArgumentException(
+          "Smoothing is not yet supported for this kind of data. " + originalData.getClass()
+              .getName());
     }
     modularFeature.set(FeatureDataType.class, resolvedData);
 
@@ -655,8 +581,8 @@ public class FeatureConvertors {
         resolvedPeak.getRawDataPointsRTRange().upperEndpoint());
     Range<Double> mzRange = Range.closed(resolvedPeak.getRawDataPointsMZRange().lowerEndpoint(),
         resolvedPeak.getRawDataPointsMZRange().upperEndpoint());
-    Range<Float> intensityRange =
-        Range.closed(resolvedPeak.getRawDataPointsIntensityRange().lowerEndpoint().floatValue(),
+    Range<Float> intensityRange = Range
+        .closed(resolvedPeak.getRawDataPointsIntensityRange().lowerEndpoint().floatValue(),
             resolvedPeak.getRawDataPointsIntensityRange().upperEndpoint().floatValue());
     modularFeature.set(MZRangeType.class, mzRange);
     modularFeature.set(RTRangeType.class, rtRange);
@@ -698,8 +624,7 @@ public class FeatureConvertors {
       i++;
     }
 
-    SimpleIonTimeSeries timeSeries = new SimpleIonTimeSeries(storage, mzs,
-        intensities, scansList);
+    SimpleIonTimeSeries timeSeries = new SimpleIonTimeSeries(storage, mzs, intensities, scansList);
 
     return timeSeries;
   }
